--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> Pagina Home</h1>
+    <p>Vendas = R$ 5.000</p>
     <a href="vendas.html">Ir para Página de Vendas</a>
 </body>
 </html>
