adicionado linha vendas

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1> Pagina Home</h1>
     <p>Vendas = R$ 5.000</p>
     <a href="vendas.html">Ir para Página de Vendas</a>
+    <p>Vendas = R$ 10.000</p>
 </body>
 </html>
